Fixed header spacing

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -32,12 +32,21 @@
   border: 1px solid var(--border-color, #ccc); /* Optional: Adjust the border color */
   background-color: var(--third-color);
   color: var(--text-color-light);
+  margin-left: 20px; /* Adjust the space between profile image and mode toggle */
 }
 
 .iconButton img {
   width: 55px; /* Increase width as needed */
   height: 55px; /* Increase height as needed */
 }
+
+/* Add to your Header.module.css */
+.profileAndToggleContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Adjust as needed */
+}
+
 
 @keyframes glintEffect {
   0% {
